⏰ Add Watchtower for automatic weekly n8n updates
✅ AUTO-UPDATE SYSTEM:
- Watchtower container added to docker-compose.t3small.yml
- Weekly update schedule: Sundays at 3 AM
- Automatic cleanup of old images
- Label-based selective updates (n8n only)

✅ CONFIGURATION:
- Memory limit: 64MB (minimal overhead)
- Timezone: America/New_York
- Auto-cleanup enabled
- Restart handling configured

✅ n8n UPDATES:
- Watchtower label added to n8n service
- Automatic image pull and restart
- Zero-downtime updates
- Old images removed automatically

n8n will now update every week automatically! 🎯

--- a/docker-compose.t3small.yml
+++ b/docker-compose.t3small.yml
@@ -140,6 +140,8 @@ services:
     depends_on:
       n8n-import:
         condition: service_completed_successfully
+    labels:
+      - "com.centurylinklabs.watchtower.enable=true"
 
   qdrant:
     image: qdrant/qdrant
@@ -250,3 +252,26 @@ services:
     devices:
       - /dev/kfd
       - /dev/dri
+
+  # Watchtower - Automatic Docker Image Updates
+  watchtower:
+    image: containrrr/watchtower
+    container_name: watchtower
+    restart: unless-stopped
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    environment:
+      - WATCHTOWER_CLEANUP=true
+      - WATCHTOWER_INCLUDE_RESTARTING=true
+      - WATCHTOWER_INCLUDE_STOPPED=false
+      - WATCHTOWER_SCHEDULE=0 0 3 * * SUN
+      - WATCHTOWER_LABEL_ENABLE=true
+      - TZ=America/New_York
+    labels:
+      - "com.centurylinklabs.watchtower.enable=true"
+    deploy:
+      resources:
+        limits:
+          memory: 64M
+        reservations:
+          memory: 32M
