--- a/docker-compose.minimal.yml
+++ b/docker-compose.minimal.yml
@@ -1,8 +1,9 @@
 version: '3.8'
 
 # Minimal deployment for AWS t3.small (2GB RAM)
-# Services: n8n + Flowise + Caddy only
-# Memory usage: ~1.2GB total
+# Services: n8n (PRIMARY) + Flowise + Caddy
+# Memory allocation: n8n 1.2GB, Flowise 640MB, Caddy 128MB, Watchtower 64MB
+# Total: ~1.9GB (n8n prioritized)
 
 services:
   # =============================================================================
@@ -48,11 +49,12 @@ services:
       - EXECUTIONS_DATA_MAX_AGE=168
       - N8N_METRICS=false
       - N8N_LOG_LEVEL=info
+      - NODE_OPTIONS=--max-old-space-size=1024
     volumes:
       - n8n_data:/home/node/.n8n
     networks:
       - hpc-network
-    mem_limit: 512m
+    mem_limit: 1200m
     stop_grace_period: 30s
     healthcheck:
       test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:5678/healthz || exit 1"]
@@ -79,12 +81,12 @@ services:
       - SECRETKEY_PATH=/root/.flowise
       - LOG_LEVEL=info
       - LOG_PATH=/root/.flowise/logs
-      - NODE_OPTIONS=--max-old-space-size=768
+      - NODE_OPTIONS=--max-old-space-size=512
     volumes:
       - flowise_data:/root/.flowise
     networks:
       - hpc-network
-    mem_limit: 896m
+    mem_limit: 640m
     stop_grace_period: 30s
     healthcheck:
       test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3000/api/v1/ping || exit 1"]
